gitops/manifests/argocd/tailscale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-tailscale
  namespace: argocd
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "argocd"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
